--- a/styles/main.css
+++ b/styles/main.css
@@ -7,6 +7,8 @@
 }
 
 .index-item button, 
-.index-item .card-subtitle {
+.index-item .card-subtitle, 
+.post-item .lead,
+.post-item button {
   font-size: .7rem;
 }
